# draw-cli

./: .gitignore  README.md  install.sh  pyproject.toml  rig.yaml
.github/workflows/: codeql.yml  dependency-review.yml  secret-scan.yml  tests.yml
draw_cli/: __init__.py  cli.py
tests/: smoke.py  test_smoke.py  test_version.py
