[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "draw-cli"
version = "0.2.0"
description = "Text-to-image from the CLI via Hugging Face."
requires-python = ">=3.9"
dependencies = ["huggingface_hub>=0.20", "Pillow"]

# The CLI is a real package (`draw_cli`), exposed via a proper console entry point
# instead of the deprecated distutils `script-files` shebang-rewrite (which pipx never
# installed correctly). pipx installs `draw = draw_cli.cli:main` from the wheel into an
# isolated venv that satisfies huggingface_hub + Pillow, and never touches bin/draw.
# The legacy install.sh SYMLINK path keeps working: bin/draw is a thin shim that resolves
# the symlink to the repo root and imports draw_cli.
[project.scripts]
draw = "draw_cli.cli:main"

# Explicit package list (NOT setuptools flat-layout autodiscovery, which would silently
# pull stray top-level dirs like bin/ into the wheel).
[tool.setuptools.packages.find]
include = ["draw_cli*"]
